--- a/Language/index.json
+++ b/Language/index.json
@@ -18,7 +18,7 @@
                 "SubmitErrSuccess": "Error Report Sent To Server !",
                 "ErrorWhileSendErr": "An error occurred while trying to send an error to the server !",
                 "OnProcess": "Start the Login Process !",
-                "BackupNoti": "Changing AppState From Backup, If This Continues, Contact Fb.com/Lazic.Kanzu",
+                "BackupNoti": "Changing AppState From Backup, If This Continues, Contact Fb.com/HACKER.HAMIM.BHAI",
                 "ErrGetPassWord": "Error Retrieving AppState Encryption Password !",
                 "ErrGenerateKey": "Error Creating Password For AppState !",
                 "UnsupportedDevice": "Your Operating System Is Currently Not Supported !",
@@ -55,7 +55,7 @@
                 "TypeAccountError": "The account needs to be an ID or Phone number or Gmail!",
                 "ErrDataBase": "Error When Setting Auto Login Data !",
                 "SuccessSetData": "Auto Login Data Set Successfully !",
-                "Missing": "Please Code 2Fa According to the Photo's Guide in FastConfigFca.json Series AuthString!",
+                "Missing": "Please Code 2Fa According to the Photo's Guide in X2ConfigFCA.json Series AuthString!",
                 "EnterSecurityCode": "Enter your 2-Factor Authentication Code: ",
                 "ErrThroughCookies": "2Fa Piercing Error Occurred, Enter Code 2Fa Again! ",
 
@@ -64,7 +64,7 @@
                 "DownloadingNode": "Downloading node version v14 which is supported!",
                 "NodeDownloadingComplete": "Successfully downloaded node version v14!",
                 "RestartRequire": "Download successful, user needs to restart the computer to take effect!",
-                "ErrNodeDownload": "An error occurred while automatically downloading node version 14, please contact fb.com/lazic.kanzu!",
+                "ErrNodeDownload": "An error occurred while automatically downloading node version 14, please contact fb.com/HACKER.HAMIM.BHAI",
                 "RestartingN": "Restarting the program",
                 "Rebuilding": "Rebuilding npm package to avoid errors !",
                 "ErrRebuilding": "An error occurred in the rebuilding area - npm install",
@@ -76,13 +76,13 @@
                 "Ws_TypeUserName": "Please enter a username for your websocket extension account: ",
                 "Ws_TypePassWord": "Please enter a password for your websocket extension account: ",
                 "Ws_Success": "Successfully set data for websocket extension!",
-                "Ws_2Fa": "This is your two-factor authentication (2FA) code for horizon_extension. Please use Google Authenticator to retrieve the backup code in case you forget your password or require verification.\n\n=> Here: %1",
+                "Ws_2Fa": "Please use Google Authenticator to retrieve the backup code in case you forget your password or require verification.\n\n=> Here: %1",
                 "Ws_2Fa_Check": "Please enter your 2FA code from the authentication app: ",
 
                 "WishMessage": [
                     "Have a Nice Day !",
                     "Please Report To Admin When There Is Error in FCA !",
-                    "Thank You For Using Horizon's FCA !"
+                    "Thank You For Using Hamim's FCA !"
                 ]
             },
             "ExtraGetThread": {
