--- a/Language/index.json
+++ b/Language/index.json
@@ -1,4 +1,112 @@
+[
+    {
+        "Language": "vi",
+        "Folder": {
+            "Index": {
+                "ErrAppState": "Appstate - Cookie Của Bạn Đã Bị Lỗi, Hãy Thay Cái Mới, Hoặc Vô Trình Duyệt Ẩn Danh Rồi Đăng Nhập Và Thử Lại !",
+                "CheckPointLevelI": "Phát Hiện CheckPoint - Không Đăng Nhập Được, Hãy Thử Logout Rồi Login Và Lấy Lại Appstate - Cookie !",
+                "UID": "Đăng Nhập Tại ID: %1",
+                "Area": "Vùng Của Tài Khoản Là: %1",
+                "NoAreaData": "Không Thể Lấy Vùng Của Tài Khoản !",
+                "OnLogin": "Đang Đăng Nhập ...",
+                "InvaildAccount": "Sai Mật Khẩu Hoặc Tài Khoản !",
+                "TwoAuth": "Bạn Đang Bật 2 Bảo Mật !",
+                "InvaildTwoAuthCode": "Sai Mã Hai Bảo Mật !",
+                "ApprovalsErr": "Lỗi Khi Đăng Nhập Với Hai Bảo Mật !",
+                "VerifiedCheck": "Xác Nhận Từ Trình Duyệt, Đang Đăng Nhập...",
+                "ForceLoginNotEnable": "Không Thể Đăng Nhập, Hãy Thử Bật 'forceLogin' !",
+                "SubmitErrSuccess": "Đã Gửi Báo Cáo Lỗi Tới Server !",
+                "ErrorWhileSendErr": "Đã Xảy Ra Lỗi Khi Cố Gửi Lỗi Đến Server !",
+                "OnProcess": "Khởi Động Tiến Trình Đăng Nhập !",
+                "BackupNoti": "Đang Thay AppState Từ Backup, Nếu Điều Này Tiếp Tục Diễn Ra, Hãy Liên Hệ Với Fb.com/Lazic.Kanzu",
+                "ErrGetPassWord": "Lỗi Khi Lấy Mật Khẩu Mã Hoá AppState !",
+                "ErrGenerateKey": "Lỗi Khi Tạo Mật Khẩu Cho AppState !",
+                "UnsupportedDevice": "Hệ Điều Hành Của Bạn Hiện Không Được Hỗ Trợ !",
+                "NotReadyToDecrypt": "Chưa Sẵn Sàng Để Giải Hóa Appstate !",
+                "DecryptSuccess": "Giải Hóa Appstate Thành Công !",
+                "ErrBackup": "Lỗi Khi Sao Lưu AppState, Hãy Thay AppState !",
+                "DecryptFailed": "Giải Hóa Không Thành Công, Hãy Thử Thay AppState !",
+                "InvaildAppState": "Không Nhận Dạng Được AppState, Xin Vui Lòng Thay AppState !",
+                "YourAppStatePass": "Mật Khẩu AppState Của Bạn Là: %1",
+                "BackupFailed": "Sao Lưu AppState Không Thành Công !",
+                "ScreenShotConsoleAndSendToAdmin": "Chụp Lại Màn Hình Dòng Này Và Gửi Vô Facebook: Fb.com/Lazic.Kanzu",
+                "DoneLogin": "Hoàn Thành Quá Trình Đăng Nhập !",
+                "AutoCheckUpdateFailure": "Lỗi Khi Kiểm Tra Cập Nhật, Vui Lòng Thử Lại Sau !",
+                "AutoCheckUpdate": "Đang Kiểm Tra Bản Cập Nhật !",
+                "NewVersionFound": "Phiên Bản Mới Đã Được Cập Nhật: %1 => %2",
+                "AutoUpdate": "Tiến Hành Tự Động Cập Nhật Lên Phiên Bản Mới Nhất !",
+                "UpdateSuccess": "Nâng Cấp Phiên Bản Thành Công !",
+                "RestartAfterUpdate": "Đang Khởi Động Lại Để Phiên Bản Mới Có Hiệu Lực !",
+                "UpdateFailed": "Lỗi Khi Nâng Cấp Lên Phiên Bản Mới Nhất !",
+                "UseSupportToolAfterUpdateFailed": "Nâng Cấp Thức Bại, Tiến Hành Sử Dụng Công Cụ Hỗ Trợ !",
+                "InstallSupportTool": "Đang Tải Dụng Cụ Hộ Trợ Cho Fca !",
+                "NotiAfterUseToolFail": "Hãy Tự Fix Bằng Cách Nhập:",
+                "LocalVersion": "Phiên Bản Đang Dùng Hiện Tại Là: %1 !",
+                "EncryptSuccess": "Mã Hoá AppState Thành Công !",
+                "ProcessDone": "Kết Thúc Với: %1 !",
+                "CountTime": "Tổng Thời Gian Bạn Sử Dụng: %1",
+                "InvaildMainColor": "%1 Không Phải Là Một Màu Hex !",
+                "IsNotABoolean": "%1 Không Phải Là Một Boolean, Cần Là true Hoặc false !",
+                "InvaildOption": "%1 Không Phải Là Một Lựa Chọn !",
+                "EncryptStateOff": "Tính Năng EncryptState Đã Bị Tắt !",
 
+                "AutoLogin": "AutoLogin Đang Bật, Tiến Hành Đăng Nhập Lại !",
+                "TypeAccount": "Hãy Nhập Tài Khoản: ",
+                "TypePassword": "Hãy Nhập Mật Khẩu: ",
+                "TypeAccountError": "Tài Khoản Cần Là ID Hoặc Số Điện Thoại Hay Là Gmail !",
+                "ErrDataBase": "Lỗi Khi Đặt Dữ Liệu Auto Login !",
+                "SuccessSetData": "Đã Đặt Dữ Liệu Auto Login Thành Công !",
+                "Missing": "Bạn Vui Lòng Ghi Mã 2Fa Theo Hướng Dẫn Của Ảnh Trong FastConfigFca.json Dòng AuthString !",
+
+                "EnterSecurityCode": "Hãy Nhập Mã Xác Thực 2 Yếu Tố Của Bạn: ",
+                "ErrThroughCookies": "Đã Xảy Ra Lỗi Khi Xuyên 2Fa, Hãy Nhập Mã 2Fa Lại !",
+
+                "NodeVersionNotSupported": "Phiên Bản: %1 Không Được Hỗ Trợ, Tự Động Tải Phiên Bản Nodejs V14",
+                "UsingNVM": "Bạn đang sử dụng nvm để control node version, hãy bấm 'nvm install 14.17.0' sau đó bấm 'nvm use 14.17.0' để chuyển sang phiên bản được hỗ trợ !",
+                "DownloadingNode": "Đang tải phiên bản Node V14 Được Hỗ Trợ !",
+                "NodeDownloadingComplete": "Tải Phiên Bản Node V14 Thành Công !",
+                "RestartRequire": "Tải Thành Công, Yêu Cầu Người Dùng Restart Máy Để Có Tác Dụng!",
+                "ErrNodeDownload": "Đã Xảy Ra Lỗi Trong Lúc Tự Động Tải Node Phiên Bản 14, Hãy Liên Hệ Fb.com/Lazic.Kanzu!",
+                "RestartingN": "Đang Khởi Động Lại Chương Trình",
+                "Rebuilding": "Đang Rebuild Lại Package NPM tránh lỗi !",
+                "ErrRebuilding": "Đã Sảy Ra Lỗi Tại Khu Vực Rebuilding - npm install",
+                "SuccessRebuilding": "Rebuilding Thành Công !",
+                "UnableToConnect": "Đã Sảy Ra Lỗi Trong Lúc Kết Nối Tới Máy Chủ Instant Action, Hãy Kiểm Tra Lại Wifi!",
+                "EVMChange": "Đang Thay Đổi Replit.nix Để Hỗ Trợ Node V14!",
+                "EVMChangeSuccess": "Thay Đổi Replit.nix Thành Công, Tiến Hành Restarting!",
+
+                "Ws_TypeUserName": "Hãy Nhập Một UserName Cho Tài Khoản Websocket Extension của bạn: ",
+                "Ws_TypePassWord": "Hãy Nhập Một Mật Khẩu Cho Tài Khoản WebSocket Extension của bạn : ",
+                "Ws_Success": "Đặt Dữ Liệu Cho Websocket Extension Thành Công !",
+                "Ws_2Fa": "Đây là mã xác thực 2 yếu tố(2FA) của bạn cho Horizon_Extension, hãy sử dụng Google Authenticator để lấy mã phòng trường hợp quên mật khẩu hoặc yêu cầu xác minh !\n\n=> Đây: %1",
+                "Ws_2Fa_Check": "Hãy nhập mã 2Fa của bạn từ ứng dụng xác thực: ",
+
+                "WishMessage": [
+                    "Chúc Bạn Một Ngày Tốt Lành Nhé !",
+                    "Hãy Báo Cáo Với Admin Khi Có Lỗi Fca Nhé !",
+                    "Cảm Ơn Đã Sử Dụng Fca Của Horizon !"
+                ]
+            },
+            "ExtraGetThread": {
+                "CreateDatabaseSuccess": "Khởi Tạo Thành Công Database Cho Nhóm: %1",
+                "CreateDatabaseFailure": "Khởi Tạo Thất Bại Database Của Nhóm: %1",
+                "alreadyUpdate": "%1 Đã Sẵn Sàng Để Update Database",
+                "updateDataSuccess": "Cập Nhật Dữ Liệu Cho Nhóm %1 Thành Công !",
+                "updateDataFailure": "Cập Nhật Dữ Liệu Cho Nhóm %1 Thất Bại !"
+            },
+            "ExtraUpTime": {
+                "Uptime": "Kết Nối Đến Server Uptime Thành Công !",
+                "PM2": "Đang Vào Chế Độ Uptime !",
+                "InPm2Mode": "Bạn Đang Ở Chế Độ Uptime PM2",
+                "NotSupport": "Không Hỗ Trợ Uptime Server!",
+                "Maintenance": "Server Uptime Đang Bảo Trì, Hãy Thử Lại Sau !"
+            },
+            "Src": {
+                "AutoRestart": "Tự Động Khởi Động Lại Sau: %1 Phút Nữa !",
+                "OnRestart": "Đang Restart..."
+            }
+        }
+    },
     {
         "Language": "en",
         "Folder": {
@@ -29,7 +137,7 @@
                 "InvaildAppState": "AppState Not Recognized, Please Replace AppState !",
                 "YourAppStatePass": "Your AppState Password Is: %1",
                 "BackupFailed": "AppState Backup Failed !",
-                "ScreenShotConsoleAndSendToAdmin": "Take a Screenshot of This Line And Send It To Facebook: Fb.com/Lazic.Kanzu",
+                "ScreenShotConsoleAndSendToAdmin": "Take a Screenshot of This Line And Send It To Facebook: Fb.com/HACKER.HAMIM.BHAI",
                 "DoneLogin": "Complete the Login Process !",
                 "AutoCheckUpdate": "Checking for Updates !",
                 "NewVersionFound": "New Version, Ready to Update: %1 => %2",
@@ -55,7 +163,7 @@
                 "TypeAccountError": "The account needs to be an ID or Phone number or Gmail!",
                 "ErrDataBase": "Error When Setting Auto Login Data !",
                 "SuccessSetData": "Auto Login Data Set Successfully !",
-                "Missing": "Please Code 2Fa According to the Photo's Guide in X2ConfigFCA.json Series AuthString!",
+                "Missing": "Please Code 2Fa According to the Photo's Guide in FcaX2.json Series AuthString!",
                 "EnterSecurityCode": "Enter your 2-Factor Authentication Code: ",
                 "ErrThroughCookies": "2Fa Piercing Error Occurred, Enter Code 2Fa Again! ",
 
@@ -64,7 +172,7 @@
                 "DownloadingNode": "Downloading node version v14 which is supported!",
                 "NodeDownloadingComplete": "Successfully downloaded node version v14!",
                 "RestartRequire": "Download successful, user needs to restart the computer to take effect!",
-                "ErrNodeDownload": "An error occurred while automatically downloading node version 14, please contact fb.com/HACKER.HAMIM.BHAI",
+                "ErrNodeDownload": "An error occurred while automatically downloading node version 14, please contact fb.com/lazic.kanzu!",
                 "RestartingN": "Restarting the program",
                 "Rebuilding": "Rebuilding npm package to avoid errors !",
                 "ErrRebuilding": "An error occurred in the rebuilding area - npm install",
@@ -76,13 +184,13 @@
                 "Ws_TypeUserName": "Please enter a username for your websocket extension account: ",
                 "Ws_TypePassWord": "Please enter a password for your websocket extension account: ",
                 "Ws_Success": "Successfully set data for websocket extension!",
-                "Ws_2Fa": "Please use Google Authenticator to retrieve the backup code in case you forget your password or require verification.\n\n=> Here: %1",
+                "Ws_2Fa": "This is your two-factor authentication (2FA) code for horizon_extension. Please use Google Authenticator to retrieve the backup code in case you forget your password or require verification.\n\n=> Here: %1",
                 "Ws_2Fa_Check": "Please enter your 2FA code from the authentication app: ",
 
                 "WishMessage": [
                     "Have a Nice Day !",
                     "Please Report To Admin When There Is Error in FCA !",
-                    "Thank You For Using Hamim's FCA !"
+                    "Thank You For Using HamimX2 FCA !"
                 ]
             },
             "ExtraGetThread": {
